[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/UI/page/latar_koleksi.jpg" type="Texture" id=1]
[ext_resource path="res://assets/UI/button/back.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/button/back_press.png" type="Texture" id=3]
[ext_resource path="res://scene/transition.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/UI/button/skip.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/button/skip_press.png" type="Texture" id=6]
[ext_resource path="res://script/Koleksi.gd" type="Script" id=7]

[node name="Koleksi" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.0
margin_top = -95.0
margin_right = 262.0
margin_bottom = 159.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pg_1" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/pg_1"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_top = 0.284
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -136.32
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_back" type="TextureButton" parent="."]
margin_left = 12.0
margin_top = 13.0
margin_right = 58.0
margin_bottom = 59.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.0
margin_top = 240.0
margin_right = -38.0
margin_bottom = -184.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="TextureButton" parent="."]
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 240.0
margin_right = 148.0
margin_bottom = -184.0
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transition" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="btn_back" to="." method="_on_return_to_menu"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
